Fix: Video control bar overlapping left side positioned chat

--- a/assets/SCSS/platforms/kick/_layout.scss
+++ b/assets/SCSS/platforms/kick/_layout.scss
@@ -1,8 +1,14 @@
 body > [data-theatre].ntv {
 	&__chat-position {
 		&--left {
+			// Selects parent of #channel-chatroom
 			:has(> #channel-chatroom) {
 				flex-direction: row-reverse;
+			}
+
+			#video-player + div {
+				left: auto;
+				right: 0;
 			}
 		}
 	}
